@@ -350,7 +350,8 @@ The machine type does affect a few things like which ports are used for the mult
 
 -Windows no es capaz de usar imagen mmc de 2 GB. Quiza porque es un compilado para 32 bits?
 
--Mkdir en esxdos handler?. running from RAM, not dot commands, IX points to the ASCIIZ filename. The call is f_mkdir equ fsys_base + 18;			// $aa
+-Mkdir en esxdos handler?. running from RAM, not dot commands, IX points to the ASCIIZ filename. 
+The call is f_mkdir equ fsys_base + 18;			// $aa
 
 -Eliminar función realtime
 
@@ -381,3 +382,10 @@ export LDFLAGS="-O2 -mmacosx-version-min=10.13"
 
 Al menos poner un 10.x dos versiones inferior al que yo tenga, suponiendo que funcione bien...
 -Use otool -l /path/to/binary and inspect the LC_VERSION_MIN_MACOSX load command; 
+
+
+-Con carga top speed salen dos footer ? El nuevo de rojo también...  Quizá el Rojo debería ser el Tspeed que ya sale en la carga...
+
+-En sped poder agregar texto changelog en cada fuente al grabar. Quizá bloque adicional de bytes para ello
+
+-En tape output, aparte de truncate etc, poder usar rotate-truncate para rotar los .tap viejos
