@@ -2,6 +2,7 @@ Version 8.2 - xxx edition. 2 March 2020
 
 Added F key to toggle top cpu speed
 Fixed esxdos handler segfaults when using a file handler that was a directory
+Esxdos handler: add f_mkdir function 
 
 
 Version 8.1.1 - The Great Escape edition. 2 March 2020
